# wind

./: .gitignore  Cargo.toml  NOTES.md  README.md  justfile  rustfmt.toml
crates/wind/: Cargo.toml
crates/wind-core/: Cargo.toml
crates/wind-core/src/: inbound.rs  interface.rs  io.rs  lib.rs  log.rs  outbound.rs  types.rs  udp.rs  udp_tests.rs
crates/wind-socks/: Cargo.toml
crates/wind-socks/src/: ext.rs  inbound.rs  lib.rs  udp.rs
crates/wind-test/: Cargo.toml
crates/wind-test/benches/: arc_bench.rs
crates/wind-test/src/: lib.rs  socks5.rs
crates/wind-tuic/: Cargo.toml  SPEC.md
crates/wind-tuic/src/: ext.rs  inbound.rs  lib.rs  outbound.rs  task.rs  tls.rs
crates/wind-tuic/src/proto/: addr.rs  error.rs  header.rs  mod.rs  tests.rs  udp_stream.rs
crates/wind-tuic/src/proto/v5/: addr.rs  cmd.rs  header.rs  mod.rs  tests.rs
crates/wind-tuic/tests/: integration_test.rs
crates/wind/src/: cli.rs  log.rs  main.rs  tests.rs  util.rs
crates/wind/src/conf/: mod.rs  persistent.rs  runtime.rs
