[package]
name = "wind-core"
version.workspace = true
repository.workspace = true
edition.workspace = true
description.workspace = true
license = "MIT OR Apache-2.0"

[features]
default = ["quic"]
quic = ["quinn"]

[dependencies]
pin-project = "1"
tokio = { version = "1", default-features = false, features = ["io-util", "macros", "time", "net"] }
tokio-util = { version = "0.7", features = ["rt"] }

quinn = { version = "*", default-features = false, optional = true }
quinn-udp = "0.5"

socket2 = "0.6"

serde = { version = "*", features = ["derive"] }

futures = "*"


bytes = "*"
eyre = "*"
pin-project-lite = "0.2"

tracing = "*"
const-str = "0.7"
rand = "0.9.2"

[dev-dependencies]
serde_json = "1"