[package]
name = "wind-socks"
version.workspace = true
repository.workspace = true
edition.workspace = true
description.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
wind-core = { path = "../wind-core"}
# Async
tokio = { version = "1", default-features = false, features = ["net"] }
tokio-util = { version = "*", features = ["codec"] }
tokio-stream = "*"
futures-util = { version = "*", default-features = false, features = ["sink"] }
fast-socks5 = "1.0.0-rc.0" 

# Pattern
arc-swap = "1"

socket2 = "*"
snafu = "0.8"
eyre = "*"
tracing = "*"

[dev-dependencies]
tokio = { version = "*", default-features = false, features = ["macros", "rt"] }
eyre = "*"
