[package]
name = "wind-test"
version.workspace = true
repository.workspace = true
edition.workspace = true
description.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
wind-core = { version = "0.1.1", path = "../wind-core"}

# Async
tokio = { version = "1", default-features = false, features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

criterion = "0.4"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
eyre = "0.6"


[[bench]]
name = "arc_bench"
harness = false