[package]
name = "wind-tuic"
version.workspace = true
repository.workspace = true
edition.workspace = true
description.workspace = true
license = "MIT OR Apache-2.0"

[features]
default = ["server", "client", "aws-lc-rs"]
decode = []
encode = []
server = ["decode"]
client = ["encode"]
aws-lc-rs = [
    "rustls/aws-lc-rs",
    "quinn/rustls-aws-lc-rs"
]
ring = [
    "rustls/ring",
    "quinn/rustls-ring"
]

[dependencies]
wind-core = { path = "../wind-core", features = ["quic"]}


# Async
tokio = { version = "*", default-features = false, features = ["net"] }
tokio-util = { version = "*", features = ["codec"] }
quinn = { version = "*", default-features = false, features = ["runtime-tokio"]}
crossfire = { version = "2", features = ["tokio"] }

tokio-stream = "*"
futures-util = { version = "*", default-features = false, features = ["sink"] }

bytes = "*"
uuid = "*"
hex = { package = "const-hex", version = "1" }

eyre = "*"

# Patterns
num_enum = "0.7"
snafu = { version = "*", features = ["unstable-provider-api"]}
enum_dispatch = "*"
secrecy = "0.10"
pin-project = "1"
moka = { version = "0.12", features = ["future"] }

# TLS
tokio-rustls = { version = "*", default-features = false, features = ["logging"] }
rustls = { version  = "*", default-features = false }
rustls-platform-verifier = { version = "*", default-features = false }


tracing = "*"
[dev-dependencies]
tokio = { version = "*", default-features = false, features = ["macros", "rt"] }
eyre = "*"
color-eyre = { version = "0.6", default-features = false }