[package]
name = "wind"
version.workspace = true
repository.workspace = true
edition.workspace = true
description.workspace = true
license = "AGPL-3.0-or-later"

[dependencies]
wind-core = { path = "../wind-core"}
wind-socks = { path = "../wind-socks"}
wind-tuic = { path = "../wind-tuic"}

# Async
tokio = { version = "*", features = ["rt-multi-thread"] }

eyre = "*"
uuid = "*"