[package]
name = "wind"
version.workspace = true
repository.workspace = true
edition.workspace = true
description = "A proxy tool written in Rust"
license = "AGPL-3.0-or-later"

[dependencies]
wind-core = { path = "../wind-core"}
wind-socks = { path = "../wind-socks"}
wind-tuic = { path = "../wind-tuic"}

# Async
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
tokio-util = { version = "*", features = ["rt"] }

tracing = "*"

clap = { version = "4", features = ["derive"] }
clap_derive = { version = "4.0.0-rc.1" }

time = { version = "0.3", features = ["macros", "local-offset"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["tracing-log", "std", "local-time","fmt", "ansi"] }
const-str = "0.7"

eyre = "*"
uuid = "*"